--- a/index.html
+++ b/index.html
@@ -2,18 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="./public/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
             name="description"
             content="Web site created using create-react-app"
     />
-    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+<!--    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">-->
+    <link rel="apple-touch-icon" href="./public/logo192.png" />
+    <link rel="manifest" href="./public/manifest.json" />
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
-    <title>React App</title>
+    <script type="text/babel" src="./src/index.js"></script>
+    <title>Save The DEX game</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
