--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="./public/favicon.ico" />
+    <link rel="icon" href="favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -10,10 +10,10 @@
             content="Web site created using create-react-app"
     />
 <!--    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">-->
-    <link rel="apple-touch-icon" href="./public/logo192.png" />
-    <link rel="manifest" href="./public/manifest.json" />
+    <link rel="apple-touch-icon" href="logo192.png" />
+    <link rel="manifest" href="manifest.json" />
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
-    <script type="text/babel" src="./src/index.js"></script>
+    <script type="text/babel" src="../src/index.js"></script>
     <title>Save The DEX game</title>
   </head>
   <body>
