--- a/public/index.html
+++ b/public/index.html
@@ -4,20 +4,12 @@
     <meta charset="utf-8" />
     <link rel="icon" href="favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-            name="description"
-            content="Web site created using create-react-app"
-    />
-<!--    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">-->
-    <link rel="apple-touch-icon" href="logo192.png" />
-    <link rel="manifest" href="manifest.json" />
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
-    <script type="text/babel" src="../src/index.js"></script>
+
     <title>Save The DEX game</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <button ><a href="/game/HackatomssRepaired2-HTML5-Shipping.html">Играть</a></button>
   </body>
 </html>
