--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,11 @@
     <link rel="icon" href="favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
-
     <title>Save The DEX game</title>
   </head>
   <body>
     <div id="root"></div>
-    <button ><a href="/game/HackatomssRepaired2-HTML5-Shipping.html">Играть</a></button>
+<!--    <button></button>-->
+<!--    <button ><a href="/game/HackatomssRepaired2-HTML5-Shipping.html">Играть</a></button>-->
   </body>
 </html>
